# Intune-MDM-Mac-Analyzer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
intune_analyzer/: __init__.py  __main__.py  analyzer.py  apple_ddm.py  cis.py  cli.py  collector.py  gui.py  models.py  pipeline.py  report.py  rules.py
intune_analyzer/parsers/: __init__.py  autoupdate.py  base.py  ddm_status.py  defender.py  install.py  intune.py  office.py  psso.py  system.py
samples/: README.md
samples/ddm/: DeviceStatusReport.json  MDMCommandResponse.json
tests/: test_analyzer.py  test_cis.py  test_ddm_status.py  test_parsers.py  test_report.py
